Thu Aug 25 04:54:51 CEST 2005 (tk)
----------------------------------
  * libclamav/elf.[ch]: new files (initial version of ELF scanning module),
			not yet activated

Wed Aug 24 20:02:54 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Use r_gethostbyname

Sun Aug 21 03:19:15 CEST 2005 (tk)
----------------------------------
  * libclamav: improve scanning of zip files (patch by Daniel Fahlgren
	       <fahlgren*ardendo.se>)

Sun Aug 21 01:06:54 CEST 2005 (tk)
----------------------------------
  * clamd: use reentrant version of gethostbyname when available

Sun Aug 21 00:32:10 CEST 2005 (tk)
----------------------------------
  * shared/network.[ch]: new files (include r_gethostbyname by NJH)

Wed Aug 17 15:53:33 CEST 2005 (acab)
------------------------------------
  * libclamav/spin.c: fixed bitmap shifting

Tue Aug 16 12:50:30 CEST 2005 (acab)
------------------------------------
  * libclamav: fixed compiler warnings (thx njh)

Mon Aug 15 22:13:11 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Improved signal handling

Mon Aug 15 18:17:29 CEST 2005 (acab)
------------------------------------
  * libclamav: fsg handler improved

Sat Aug 13 19:08:55 CEST 2005 (acab)
-----------------------------------
  * libclamav/spin.c: improvements and fixups

Fri Aug 12 18:17:59 CEST 2005 (tk)
----------------------------------
  * libclamav/filetypes.c: update zip-sfx type signature (Sven Strickroth)

Thu Aug 11 21:15:26 BST 2005 (njh)
----------------------------------
  * clamav-milter:	--timeout wasn't always being honoured

Fri Aug  5 02:48:47 CEST 2005 (tk)
----------------------------------
  * libclamav: merge PESpin unpacker from aCaB

Wed Aug  3 16:28:20 CEST 2005 (tk)
----------------------------------
  * libclamav/others.c: cli_rmdirs: ENOTEMPTY is EBADF on AIX (thanks to
			Tayfun Asker <tasker*metu.edu.tr>)

Wed Aug  3 16:16:59 CEST 2005 (tk)
----------------------------------